GARPDev-salesforce/eclipse/GARPDev/src/objects/Exam__c.object
<CustomObject>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferral_Fee__c</fullName>
        <inlineHelpText>Let the candidate know what the $ amount would be if they are deferring the exam</inlineHelpText>
        <label>Deferral Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Exam_Registration_Fee__c</fullName>
        <inlineHelpText>Input the $ amount so candidate know what&apos;s Early Exam Registration Fee</inlineHelpText>
        <label>Early Exam Registration Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enrollment_Fee__c</fullName>
        <inlineHelpText>Let the candidate know what the $ amount would be for the program enrollment</inlineHelpText>
        <label>Enrollment Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exam Group</label>
        <referenceTo>Exam_Group__c</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exam_Name__c</fullName>
        <label>Exam Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exam_Request_Change_Fee__c</fullName>
        <inlineHelpText>Let the candidate know what the $ amount would be for the exam request change</inlineHelpText>
        <label>Exam Request Change Fee</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exam_Status__c</fullName>
        <label>Exam Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <label>Exam</label>
        <picklist>
            <picklistValues>
                <fullName>FRM Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRM Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Israel_Exam_Date__c</fullName>
        <label>Israel Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_For_ADA__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date to apply for the ADA</inlineHelpText>
        <label>Last Date For ADA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_For_Early_Registration__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date to early registration</inlineHelpText>
        <label>Last Date For Early Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_For_Late_Registration__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date to late registration</inlineHelpText>
        <label>Last Date For Late Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_For_Location_Change__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date to apply for the location change</inlineHelpText>
        <label>Last Date For Location Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_For_Scholarship__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date to apply for the scholarship</inlineHelpText>
        <label>Last Date For Scholarship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_For_Standard_Registration__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date to standard registration</inlineHelpText>
        <label>Last Date For Standard Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_To_Apply_For_Deferral__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date to apply for the deferral</inlineHelpText>
        <label>Last Date To Apply For Deferral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_To_Request_Exam_Change__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date for switching exam from ERP to FRM or FRM to ERP</inlineHelpText>
        <label>Last Date To Request Exam Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Exam_Registration_Fee__c</fullName>
        <inlineHelpText>Input the $ amount so candidate know what&apos;s Late Exam Registration Fee</inlineHelpText>
        <label>Late Exam Registration Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religious_Alternative_Last_Date__c</fullName>
        <inlineHelpText>Select the date so candidate know what&apos;s last date to request for the Religious Alternative date</inlineHelpText>
        <label>Religious Alternative Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Exam_Registration_Fee__c</fullName>
        <inlineHelpText>Input the $ amount so candidate know what&apos;s Stadard Exam Registration Fee</inlineHelpText>
        <label>Standard Exam Registration Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Exam</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Exam__c</columns>
        <columns>Exam_Date__c</columns>
        <columns>Exam_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ADA_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Exam_Date__c &lt;=  Last_Date_For_ADA__c</errorConditionFormula>
        <errorDisplayField>Last_Date_For_ADA__c</errorDisplayField>
        <errorMessage>Please note that Last Date for ADA has to be before the Exam Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deferral_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Exam_Date__c &lt;=   Last_Date_To_Apply_For_Deferral__c</errorConditionFormula>
        <errorDisplayField>Last_Date_To_Apply_For_Deferral__c</errorDisplayField>
        <errorMessage>Please note Last Date to Apply for Deferral has to be before the Exam Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exam_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR (Exam_Date__c  &lt;= Last_Date_For_Early_Registration__c, 
Exam_Date__c &lt;= Last_Date_For_Standard_Registration__c, Exam_Date__c &lt;= Last_Date_For_Late_Registration__c
)</errorConditionFormula>
        <errorMessage>Last Date for Early/Standard/Late Registration has to be before the Exam Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Isarael_Exam_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR (Exam_Date__c &lt; TODAY(), 
Israel_Exam_Date__c &lt; TODAY(), 
Israel_Exam_Date__c &lt;= Exam_Date__c
)</errorConditionFormula>
        <errorMessage>Please ensure Exam Date and Israel Exam Date have to be future dates. In addition, Israel Exam Date can not be the same as   Exam Date or less.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_Change</fullName>
        <active>true</active>
        <errorConditionFormula>Exam_Date__c &lt;=  Last_Date_For_Location_Change__c</errorConditionFormula>
        <errorDisplayField>Last_Date_For_Location_Change__c</errorDisplayField>
        <errorMessage>Please note that last date for the location change has to be before the Exam Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RA_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Exam_Date__c &lt;=  Religious_Alternative_Last_Date__c</errorConditionFormula>
        <errorDisplayField>Religious_Alternative_Last_Date__c</errorDisplayField>
        <errorMessage>Please note that last date for Religious Alternative has to be before the Exam Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Exam_Change</fullName>
        <active>true</active>
        <errorConditionFormula>Exam_Date__c &lt;=  Last_Date_To_Request_Exam_Change__c</errorConditionFormula>
        <errorDisplayField>Last_Date_To_Request_Exam_Change__c</errorDisplayField>
        <errorMessage>Please note that Last Date for Exam Request Change has to be before the Exam Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scholarship_Last_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Exam_Date__c &lt;=  Last_Date_For_Scholarship__c</errorConditionFormula>
        <errorDisplayField>Last_Date_For_Scholarship__c</errorDisplayField>
        <errorMessage>Please note that Last Date for Scholarship has to be before the Exam Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Early_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR ( Last_Date_For_Early_Registration__c &gt;=  Last_Date_For_Standard_Registration__c , 
Last_Date_For_Early_Registration__c &gt;=   Last_Date_For_Late_Registration__c
)</errorConditionFormula>
        <errorDisplayField>Last_Date_For_Early_Registration__c</errorDisplayField>
        <errorMessage>Please note Last Date for Early Registration has to be before the last date of the Standard or Late Registration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Standard_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR ( Last_Date_For_Standard_Registration__c &gt;=  Last_Date_For_Late_Registration__c
)</errorConditionFormula>
        <errorMessage>Please note Last Date for Standard Registration has to be before the Last Date of the Late Registration</errorMessage>
    </validationRules>
</CustomObject>